--- a/src/css/style.css
+++ b/src/css/style.css
@@ -67,7 +67,7 @@ label {
 
 .questions p, ul {
     color: white;
-    font-size: 1.8rem;
+    font-size: 1.5rem;
 }
 
 .questions p {
@@ -85,9 +85,10 @@ label {
 
 .questions ul li {
     cursor: pointer;
-    padding: 0.5rem;
+    padding: 0.4rem;
     background-color: black;
     transform: rotateX(90deg);
+    margin-top: 0.4rem;
 }
 
 .questions ul li span:nth-child(2) {
@@ -114,7 +115,7 @@ label {
 }
 
 .explanation .text-wrapper p {
-    font-size: 1.6rem;
+    font-size: 1.3rem;
     background-color: black;
     color: white;
     padding: 0.8rem;
